added markdown comments

--- a/processing/feature_extraction.ipynb
+++ b/processing/feature_extraction.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 1. Set the variables for the project\n",
+    "\n",
+    "Here we set \n",
+    "- the sample rate\n",
+    "- the MA value \n",
+    "- the number of datapoints in the ts_fresh rolling window "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -14,6 +27,14 @@
     "\n",
     "# tsfresh window\n",
     "max_window=10\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2. Import libraries"
    ]
   },
   {
@@ -53,6 +74,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Preprocessing\n",
+    "\n",
+    "## Resampling\n",
+    "\n",
+    "We read a raw data file and downsample the timeseries from 25 to 4Hz."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -89,6 +122,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Signal processing\n",
+    "\n",
+    "We use the wavelet function to create a more obvious signal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -110,6 +153,14 @@
     "    time_series_filtered = waverec(coeffs_thresholded, wavelet)\n",
     "   \n",
     "    return time_series_filtered\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying signal processing, Moving average and Normalization"
    ]
   },
   {
@@ -210,6 +261,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Defining a starting point and the end point of the timeseries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -223,11 +282,25 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Segmentation (with Ruptures)\n",
+    "\n",
+    "Here we write the functions to segmentation of the timeseries data. For this we use the Ruptures library.\n",
+    "\n",
+    "For defining the changepoints we can use the ruptures '*window*' or '*pelt*' method. For this notebook we choose the *window* method as it's performing better and is faster.\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function that detects the changepoints with ruptures\n",
     "def segment(stacked_data,window_size,penalty,method):\n",
     "\n",
     "    #Window-based approach \n",
@@ -242,7 +315,10 @@
     "    \n",
     "    return results\n",
     "\n",
-    "# Function to replace 2 nearby changepoints with one in the middle\n",
+    "# Function to replace 2 nearby changepoints with one in the middle.\n",
+    "# This is only used for the finaly resulting frame which can have several changepoints very close to eachother\n",
+    "# as each changepoint from different signals have been calculated seperately and are then added to the final list of changepoints.\n",
+    "\n",
     "def clean_results(all_results,method,datapoints):\n",
     "    new_results = []\n",
     "    i = 0\n",
@@ -271,10 +347,14 @@
     "def get_changepoints():\n",
     "    \n",
     "    all_results=[]\n",
-    "\n",
+    "    # In this notebook we will use the 'window' method for changepoint detection\n",
     "    method='window'\n",
     "\n",
-    "    \n",
+    "    # Here we determine the sensitivity of the changepoints for several signals seperatly\n",
+    "    #  penalty : the treshold for ruptures library, the higher the value, the lower the sensitivity\n",
+    "    #  window_size: the size of the window, so the number of datapoints that will be taken into account for detecting a signal shift \n",
+    "    # \n",
+    "\n",
     "    # Add acc_x_n and y from neck \n",
     "    penalty=2.1*resample_rate\n",
     "    window_size=32*resample_rate\n",
@@ -323,17 +403,26 @@
     "    results=segment(stacked_data,window_size,penalty,method)\n",
     "    all_results.append(results)\n",
     " \n",
+    "    # The variable 'all_results' is a list of all changepoints,\n",
+    "    # we remove duplicates and then sort them\n",
     "    all_results = [item for sublist in all_results for item in sublist]\n",
     "    all_results = [*set(all_results)]\n",
     "\n",
     "    all_results.sort()   \n",
-    "\n",
+    "    # We remove changepoints that are too close to eachother and replace it with their average (\"avg\") or last (\"last\") value\n",
     "    all_results=clean_results(all_results,'avg',5*resample_rate)\n",
     "    all_results=clean_results(all_results,'avg',6*resample_rate)\n",
     "    #all_results=clean_results(all_results,'last',9)\n",
     "\n",
-    "    return all_results\n",
-    "    \n"
+    "    return all_results  \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting of the segmentation of the timeseries"
    ]
   },
   {
@@ -370,8 +459,15 @@
     "        cnt+=1\n",
     "\n",
     "    # Result\n",
-    "    print (cnt,'points detected')\n",
-    "    \n"
+    "    print (cnt,'points detected')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Function to plot a frame in the segmented timeseries"
    ]
   },
   {
@@ -402,6 +498,19 @@
     "    axb.legend(loc='upper right', bbox_to_anchor=(1, 1))\n",
     "    \n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Split the timeseries into frames\n",
+    "\n",
+    "Here we begin by getting the changepoints, and seperating the timeseries data in different frames.\n",
+    "We do this by making 2 lists:\n",
+    "- end_point    : with the starting points of each frame\n",
+    "- start_point  :  with the ending points of each frame"
    ]
   },
   {
@@ -481,6 +590,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Declaration of signals that we will use"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -502,14 +619,39 @@
     "    'alpha_r': alpha_r,\n",
     "    'beta_r': beta_r,\n",
     "    'alpha_min_beta': alpha_min_beta\n",
-    "}\n",
-    "\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setting the range for the detected frames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the signal from the timeries between the start and end point of the frames\n",
     "def get_signals_range(variables, start, end):\n",
     "    variables_range = {}\n",
     "    for key, value in variables.items():\n",
     "        variables_range[key] = value[start:end]\n",
-    "    return variables_range \n",
-    " \n"
+    "    return variables_range "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a dataframe for each frame\n",
+    "\n",
+    "Now we can build seperate dataframes for each frame that was detected with ruptures library. We can plot the signals in each frame."
    ]
   },
   {
@@ -538,8 +680,10 @@
    "source": [
     "complete_df=pd.DataFrame()\n",
     "\n",
+    "# Go through the list of frames\n",
     "for i in range(len(change_points)): \n",
     "    \n",
+    "    # Read the signals in each frame\n",
     "    signals_frame = get_signals_range(variables, start_point[i],end_point[i])\n",
     "    acc_x_n_frame = signals_frame['acc_x_n']\n",
     "    acc_y_n_frame = signals_frame['acc_y_n']\n",
@@ -557,12 +701,22 @@
     "    beta_r_frame = signals_frame['beta_r']\n",
     "    alpha_min_beta_frame = signals_frame['alpha_min_beta']\n",
     "\n",
+    "    # Make a list of the signal values \n",
     "    frame_data.append(np.vstack([acc_x_n_frame,acc_y_n_frame,acc_z_n_frame,acc_x_r_frame,acc_y_r_frame,acc_z_r_frame,gyr_x_n_frame,gyr_y_n_frame,gyr_z_n_frame,gyr_x_r_frame,gyr_y_r_frame,gyr_z_r_frame,alpha_r_frame,beta_r_frame]).T)\n",
+    "    \n",
+    "    # Create a pandas dataframe from this list\n",
     "    df1=pd.DataFrame(data=frame_data[i], columns=['acc_x_n','acc_y_n','acc_z_n','acc_x_r','acc_y_r','acc_z_r','gyr_x_n','gyr_y_n','gyr_z_n','gyr_x_r','gyr_y_r','gyr_z_r','alpha_r','beta_r'])\n",
+    "\n",
+    "    # Add the frame number\n",
     "    df1['frame']=i\n",
+    "\n",
+    "    # Add the timeseries index (ie. the timeseries datapoint position in the frame)\n",
     "    df1['ts']=df1.index\n",
     "\n",
+    "    # Create the final dataframe\n",
     "    complete_df=pd.concat([complete_df,df1],axis=0)\n",
+    "\n",
+    "    # Plot a few frames, for instance, plot one for every 15 frames\n",
     "    if i%15==0:\n",
     "        print(start_point[i],end_point[i])\n",
     "        plot_frame(acc_x_n_frame,acc_y_n_frame,acc_z_n_frame,gyr_x_n_frame,gyr_y_n_frame,gyr_z_n_frame,alpha_r_frame,beta_r_frame,i)"
@@ -583,6 +737,19 @@
    ],
    "source": [
     "print(frame_data[0].shape)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complete dataframe dimension\n",
+    "The resulting dataframe has 14 signals and 2 extra columns\n",
+    "- frame : the frame number in this file\n",
+    "- ts : the timeseries index in this frame\n",
+    "\n",
+    "The number of rows is dependant on the length of the processed file"
    ]
   },
   {
@@ -893,7 +1060,15 @@
     }
    ],
    "source": [
-    "complete_df\n"
+    "complete_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Write the frame data to a file"
    ]
   },
   {
@@ -903,6 +1078,15 @@
    "outputs": [],
    "source": [
     "complete_df.to_csv(f'../data/processed/unlabeled/frames/frames_{file}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature extraction\n",
+    "We go over all the frames and extract features with the tsfresh library for each signal in each frame seperatly."
    ]
   },
   {
@@ -1070,6 +1254,19 @@
     "            extracted_features[signal]['signal']=signal\n",
     "            df_ef_signal=pd.DataFrame(data=extracted_features[signal].values)\n",
     "            df_ef=pd.concat([df_ef,df_ef_signal],axis=0)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The resulting column names after feature extraction can be cleaned and we end up with a feature extraction dataframe\n",
+    "\n",
+    "Dimension of this frame:\n",
+    "\n",
+    "- 9 frames x 14 signals = 126 rows\n",
+    "- 783 extracted features + index + signal name = 785 columns"
    ]
   },
   {
@@ -1575,6 +1772,15 @@
    ],
    "source": [
     "df_ef['length'][0:15]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can show a list with all the features that are extracted by using the tsfresh library. \n",
+    "In the next step these values will be used to train a clustering model."
    ]
   },
   {
@@ -2392,6 +2598,18 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating a big vector\n",
+    "\n",
+    "To feed the extracted features into the clustering model we create a big vector with the extracted featuers from each frames.\n",
+    "\n",
+    "Each frame is reduced to a 1 dimensional array with all the extracted features for every signal. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -2456,6 +2674,15 @@
     "    df_ef_big_vector.reset_index(inplace=True,drop=True)\n",
     "    df_ef_big_vector['frame']=df_ef_big_vector.index+1\n",
     "    return df_ef_big_vector   "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Big vector size\n",
+    "This results in 9 vectors (frames) of size 783 (extracted features) x 14 (signals) = 10962 "
    ]
   },
   {
@@ -2873,6 +3100,14 @@
    "source": [
     "df_ef_big_vector=get_extracted_features_table(df_ef)\n",
     "df_ef_big_vector"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally we write the extracted features to a file"
    ]
   },
   {
